welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:11: error: value * is not a member of Unit
      case "I" => gauche()*2;avance()
                          ^