welcome.lessons.welcome.bdr.BDR2.scala.code
var fini:Boolean = false
var lettre:String = "M"

while(fini == false) {
  if (estSurMessage()){
    lettre = litMessage();
    
    lettre match {
      case "R" => droite();avance()
      case "L" => gauche();avance()
      case "I" => gauche()*2;avance()
      case "A" =>
      case "B" =>
      case "C" =>
      case "D" =>
      case "E" =>
      case "F" =>
      case "Z" =>
      case "Y" =>
      case "X" =>
      case "W" =>
      case "V" =>
      case "U" =>
    }
  } else {
    fini = true;
  }  

}